--- a/templates/kitchen/add_kitchen.html
+++ b/templates/kitchen/add_kitchen.html
@@ -71,7 +71,7 @@
                 </div>
                 {% endif %}
                 <div class="sd-buttons">
-                    <button type="submit" class="sd-submit">Submit</button>
+                    <button style="background-color: #003366;" type="submit" class="sd-submit">Submit</button>
                 </div>
             </form>
         </div>
