--- a/templates/kitchen/wallet.html
+++ b/templates/kitchen/wallet.html
@@ -115,7 +115,7 @@
             {% endif %}
         {% endwith %}
         <div class="dashboard-container">
-            <a class="btn btn-success" style="float: right; position: relative;" href="{{ url_for('save_role_shares') }}">Close Kitchen</a>
+            <a class="btn" style="float: right; position: relative; background-color: #003366; color: #ffffff" href="{{ url_for('save_role_shares') }}">Close Kitchen</a>
             <header class="dashboard-header">
                 <h1 style="margin-left: 11%;"><b>WALLET</b></h1>
             </header>
