--- a/templates/notification.html
+++ b/templates/notification.html
@@ -10,12 +10,12 @@
     {% include 'kitchen/kitchen_header.html' %}
 {% endif %}
 
-<div id="layoutSidenav_content" style="background-color: rgb(248, 244, 238);">
+<div id="layoutSidenav_content">
     <br>
     <main>
-        <h1 class="text-center text-primary">NOTIFICATIONS</h1>
+        <h1 class="text-center">NOTIFICATIONS</h1>
         <div class="container">
-            <table class="table table-bordered" style="background-color: white;">
+            <table class="table table-bordered" style="background-color: #f0f0f0;">
                 <thead>
                     <tr>
                         <th scope="col" style="border-left: none; border-right: none;">Notification</th>
