--- a/templates/notification/activity_logs.html
+++ b/templates/notification/activity_logs.html
@@ -39,7 +39,7 @@
     }
 
     th {
-        background-color: #007BFF;
+        background-color: #333333;
         color: white;
         text-transform: uppercase;
     }
