--- a/templates/super_distributor/add_super_distributor.html
+++ b/templates/super_distributor/add_super_distributor.html
@@ -62,7 +62,7 @@
                 {% endif %}
                 <br>
                 <div class="sd-buttons">
-                    <button type="submit" class="sd-submit">Submit</button>
+                    <button style="background-color: #003366;" type="submit" class="sd-submit">Submit</button>
                 </div>
             </form>
         </div>
