--- a/templates/admin/admin_footer.html
+++ b/templates/admin/admin_footer.html
@@ -1,4 +1,4 @@
-        <footer class="py-4 bg-light mt-auto">
+        <footer class="py-4 mt-auto" style="background-color: #f0f0f0;">
             <div class="container-fluid px-4">
                 <div class="d-flex align-items-center justify-content-between small">
                     <div class="text-muted">Copyright &copy; Open Future Technologies 2024</div>
