--- a/templates/distributor/d_header.html
+++ b/templates/distributor/d_header.html
@@ -26,7 +26,7 @@
         </style>
     </head>
     <body class="sb-nav-fixed">
-        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+        <nav class="sb-topnav navbar navbar-expand navbar-dark">
             <!-- Navbar Brand-->
             <a class="navbar-brand ps-3" href="{{ url_for('distributor.distributor_home')}}">FDA</a>
             <!-- Sidebar Toggle-->
@@ -75,36 +75,33 @@
                                 {% endif %}
                                 <p class="text-center">
                                     <b>{{ user_name }}</b><br>
-                                    {% if role == 'Distributor' %}
-                                        <span class="green-dot"></span>
-                                    {% endif %}
                                 </p> 
                             <a class="nav-link" href="{{ url_for('distributor.distributor_home')}}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                                Dashboard
+                                <strong>Dashboard</strong>
                             </a>
                             <a class="nav-link" href="{{ url_for('dashboard.distributor_dashboard')}}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-chart-bar"></i></div>
-                                Statistics
+                                <strong>Statistics</strong>
                             </a>
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
                                 <div class="sb-nav-link-icon"><i class="fas fa-utensils"></i></div>
-                                Kitchens
+                                <strong>Kitchens</strong>
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
                             <div class="collapse" id="collapsePages" aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
                                     <a class="nav-link collapsed" href="{{ url_for('distributor.distrubutor_all_kitchens') }}">
-                                        List
+                                        Kitchen List
                                     </a>
                                     <a class="nav-link collapsed" href="{{ url_for('kitchen.create_kitchen') }}">
-                                        Add
+                                        Add Kitchen
                                     </a>
                                 </nav>
                             </div>
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseOrder" aria-expanded="false" aria-controls="collapsePages">
                                 <div class="sb-nav-link-icon"><i class="fas fa-shopping-basket"></i></div>
-                                Orders
+                                <strong>Orders</strong>
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
                             <div class="collapse" id="collapseOrder" aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion">
@@ -115,10 +112,12 @@
                                 </nav>
                             </div>
                         </div> 
-                    </div>
-                    <div class="sb-sidenav-footer">
-                        <div class="small">Logged in as:</div>
-                        {{ role }}
+                    </div><div class="sb-sidenav-footer">
+                        <div class="d-flex align-items-center">
+                            <i class="fa-solid fa-arrow-right-to-bracket mr-2"></i>
+                            <span class="small text-muted">Logged in as :</span>
+                        </div>
+                        <span class="font-weight-bold ml-4">{{ role }}</span>
                     </div>
                 </nav>
             </div>
