--- a/templates/kitchen/kitchen_header.html
+++ b/templates/kitchen/kitchen_header.html
@@ -14,13 +14,6 @@
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <style>
             /* Style for the green dot */
-            .green-dot {
-                width: 10px;
-                height: 10px;
-                border-radius: 50%;
-                background-color: green;
-                display: inline-block;
-            }
             /* Add animation for sidebar links */
             .nav-link {
                 transition: background-color 0.3s ease, transform 0.3s ease;
@@ -80,7 +73,7 @@
         </style>
     </head>
     <body class="sb-nav-fixed">
-        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+        <nav class="sb-topnav navbar navbar-expand navbar-dark">
             <!-- Navbar Brand-->
             <a class="navbar-brand ps-3" href="{{ url_for('kitchen.kitchen_home')}}">FDA</a>
             <!-- Sidebar Toggle-->
@@ -129,21 +122,18 @@
                                 {% endif %}
                                 <p class="text-center">
                                     <b>{{ user_name }}</b><br>
-                                    {% if role == 'Kitchen' %}
-                                        <span class="green-dot"></span>
-                                    {% endif %}
                                 </p> 
                             <a class="nav-link" href="{{ url_for('kitchen.kitchen_home')}}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                                Dashboard
+                                <strong>Dashboard</strong>
                             </a>
                             <a class="nav-link" href="{{ url_for('dashboard.kitchen_dashboard')}}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-chart-bar"></i></div>
-                                Statistics
+                                <strong>Statistics</strong>
                             </a>
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsemenu" aria-expanded="false" aria-controls="collapsePages">
                                 <div class="sb-nav-link-icon"><i class="fas fa-pizza-slice"></i></div>
-                                Food & Dining
+                                <strong>Food & Dining</strong>
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
                             <div class="collapse" id="collapsemenu" aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion">
@@ -158,7 +148,7 @@
                             </div>
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
                                 <div class="sb-nav-link-icon"><i class="fas fa-shopping-basket"></i></div>
-                                Orders
+                                <strong>Orders</strong>
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
                             <div class="collapse" id="collapsePages" aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion">
@@ -171,8 +161,11 @@
                         </div>
                     </div>
                     <div class="sb-sidenav-footer">
-                        <div class="small">Logged in as:</div>
-                        {{ role }}
+                        <div class="d-flex align-items-center">
+                            <i class="fa-solid fa-arrow-right-to-bracket mr-2"></i>
+                            <span class="small text-muted">Logged in as :</span>
+                        </div>
+                        <span class="font-weight-bold ml-4">{{ role }}</span>
                     </div>
                 </nav>
             </div>
