--- a/templates/manager/add_manager.html
+++ b/templates/manager/add_manager.html
@@ -43,7 +43,7 @@
                 
                 <br>
                 <div class="sd-buttons">
-                    <button type="submit" class="sd-submit">Submit</button>
+                    <button style="background-color: #003366;" type="submit" class="sd-submit">Submit</button>
                 </div>
             </form>
         </div>
